# todo-reminder

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  package.json  plan.md  pnpm-lock.yaml  tailwind.config.js
dev-plan/: 01-vision.md  02-gap-analysis.md  03-roadmap.md  04-release-checklist.md  README.md
docs/: GIT.md  audit-2026-04-28.md
scripts/: bump-version.ps1  register-aumid.ps1  verify-aumid.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_add_task_start_at.sql
src-tauri/src/: backup.rs  lib.rs  main.rs  power.rs  scheduler.rs  tray.rs
src/api/: autostart.ts  db.ts  reminders.ts  subtasks.ts  tags.ts  tasks.ts
src/components/: AppToolbar.tsx  CalendarMonth.tsx  ErrorBoundary.tsx  ReminderList.tsx  SettingsDialog.tsx  SubtaskList.tsx  TagChip.tsx  TagPicker.tsx  TaskCard.tsx  TaskForm.tsx  TitleBar.tsx  Toaster.tsx
src/components/ui/: Button.tsx  Checkbox.tsx  DateTimePicker.tsx  Dialog.tsx  Input.tsx  Select.tsx  Switch.tsx  Textarea.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: datetime.ts  events.ts  lunar.ts  weather.ts
src/stores/: settingsStore.ts  taskStore.ts  toastStore.ts  uiStore.ts  weatherStore.ts
src/styles/: globals.css
src/types/: models.ts
src/views/: KanbanView.tsx
